Code QL Improvements.